# registration_server

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  api.md  config.json.sample  config.toml.sample  config.toml.test  deployment.md  docker-compose.yml  flow.md  run_coverage.sh  run_from_docker.sh  run_tests.sh  rustfmt.toml
.github/workflows/: build.yml  dockerhub-description.yml  issue-to-project.yml  pr-assign-author.yml  pr-to-project.yml  projects.yml  release-mysql.yml  release-postgres.yml  release-sqlite.yml  rustapplication.yml
api/: Cargo.toml
api/src/: lib.rs
client/: index.html  main.js
config/: config.json  config.toml  env  pagekite.conf  pdns.conf
doc/: api.md  deployment.md  flow.md
docker/: init
docker/etc/cron.weekly/: geoipupdate
docker/etc/service/cron/: run
docker/etc/service/pagekite/: run
docker/etc/service/pdns/: run
docker/etc/service/registration_server/: run
docker/etc/supervisor/conf.d/: supervisord.conf
migrations/mysql/2017-11-30-192535_create_accounts/: down.sql  up.sql
migrations/mysql/2017-11-30-192538_create_domains/: down.sql  up.sql
migrations/mysql/2018-02-26-144749_add_continent_to_domains/: down.sql
migrations/mysql/2018-10-25-180818_add_opt_out_to_accounts/: down.sql
migrations/mysql/2019-08-09-174849_add_mode_to_domains/: down.sql  up.sql
migrations/postgres/2017-11-30-192535_create_accounts/: up.sql
migrations/postgres/2017-11-30-192538_create_domains/: up.sql
migrations/postgres/2018-02-26-144749_add_continent_to_domains/: up.sql
migrations/postgres/2018-10-25-180818_add_opt_out_to_accounts/: up.sql
migrations/sqlite/2017-11-30-192535_create_accounts/: up.sql
migrations/sqlite/2017-11-30-192538_create_domains/: up.sql
migrations/sqlite/2018-02-26-144749_add_continent_to_domains/: down.sql
migrations/sqlite/2018-10-25-180818_add_opt_out_to_accounts/: down.sql  up.sql
migrations/sqlite/2019-08-09-174849_add_mode_to_domains/: down.sql
pdns/: pdns.conf  pdns.conf.sample  run.sh
server/: Cargo.toml  add-reclamation-column.sql  config.toml.sample  config.toml.test  drop-ip-columns.sql  drop-local-name-column.sql  relayout-database.sql
server/src/: args.rs  config.rs  database.rs  discovery.rs  email_routes.rs  errors.rs  eviction.rs  lib.rs  pdns.rs  routes.rs
src/: api_types.rs  args.rs  config.rs  constants.rs  database.rs  db.rs  db_test_context.rs  discovery.rs  domain_store.rs  email.rs  email_routes.rs  errors.rs  eviction.rs  lib.rs  main.rs  models.rs  pdns.rs  routes.rs  schema.rs  transient_store.rs
