[package]
name = "registration_server"
version = "0.1.0"
authors = ["fabrice <fabrice@desre.org>"]

[dependencies]
clap = "2.32"
email = "0.0"
env_logger = "0.4"
hyper = "0.10"
hyper-native-tls = "0.2"
iron = "0.6"
iron-cors = { git = "https://github.com/mozilla-iot/iron-cors.git" }
lettre = "0.8"
lettre_email = "0.8"
log = "0.4"
maxminddb = "0.12"
mount = "0.4"
params = "0.8"
r2d2 = "0.8"
regex = "1.1"
router = "0.6"
rust-crypto = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"
uuid = { version = "0.7", features = ["v4"] }

[dev-dependencies]
iron-test = "0.6"

[features]
default = []
mysql = ["r2d2-diesel", "diesel/mysql"]
postgres = ["r2d2-diesel", "diesel/postgres"]
sqlite = ["r2d2-diesel", "diesel/sqlite"]

[dependencies.diesel]
optional = true
version = "1.3"

[dependencies.r2d2-diesel]
optional = true
version = "1.0"
