[package]
name = "registration_server"
version = "0.2.0"
authors = ["Mozilla IoT <iot@mozilla.com>"]

[dependencies]
clap = "2.33"
email = "0.0"
env_logger = "0.4"
hyper = "0.10"
iron = "0.6"
iron-cors = "0.8"
lettre = "0.9"
lettre_email = "0.9"
log = "0.4"
maxminddb = "0.13"
mount = "0.4"
num-derive = "0.3"
num-traits = "0.2"
params = "0.8"
r2d2 = "0.8"
regex = "1.3"
router = "0.6"
rust-crypto = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
iron-test = "0.6"

[features]
default = []
mysql = ["r2d2-diesel", "diesel/mysql"]
postgres = ["r2d2-diesel", "diesel/postgres"]
sqlite = ["r2d2-diesel", "diesel/sqlite"]

[dependencies.diesel]
optional = true
version = "1.4"

[dependencies.r2d2-diesel]
optional = true
version = "1.0"
