[package]
name = "registration_server"
version = "0.4.0"
authors = ["WebThingsIO <team@webthings.io>"]
edition = "2018"

[dependencies]
actix-rt = "1.1"
actix-web = "3.2"
clap = "2.33"
email = "0.0"
env_logger = "0.8"
lettre = "0.9"
lettre_email = "0.9"
log = "0.4"
maxminddb = "0.15"
num-derive = "0.3"
num-traits = "0.2"
r2d2 = "0.8"
regex = "1.4"
rust-crypto = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
assert-json-diff = "1.1"

[features]
default = []
mysql = ["r2d2-diesel", "diesel/mysql"]
postgres = ["r2d2-diesel", "diesel/postgres"]
sqlite = ["r2d2-diesel", "diesel/sqlite"]

[dependencies.diesel]
optional = true
version = "1.4"

[dependencies.r2d2-diesel]
optional = true
version = "1.0"
